# rdu-fileidentification-galaxy

./: .gitignore  .shed.yml  CLAUDE.md  Dockerfile  README.md  README_Galaxy.md  fidr.sh  fileidentification-galaxy.xml  identify.py  justfile  macros.xml  pyproject.toml  update.py
.github/workflows/: docker-publish.yml  planemo-test.yml  validate-version.yml
fileidentification/: filehandling.py
fileidentification/definitions/: fmt2ext.json  models.py  settings.py
fileidentification/tasks/: console_output.py  conversion.py  inspection.py  os_tasks.py  policies.py
fileidentification/wrappers/: converter.py  ffmpeg.py  imagemagick.py
policies/: dasch_policies.json
test-data/: output_results_linux_gh_action.txt
testdata/: warn_wrong_data_type_tag.tiff
