[project]
name = "fileidentification"
version = "2.5.0"
description = ""
authors = []
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.10.0",
    "pydantic>=2.11.7",
    "pygfried>=0.12.0",
    "toml>=0.10.2",
]

[project.optional-dependencies]
update_fmt = [
    "bs4>=0.0.2",
    "lxml>=6.0.2",
    "requests>=2.32.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.18.1",
    "ruff>=0.13.0",
]

[tool.mypy]
strict = true
enable_error_code = ["possibly-undefined"]

[[tool.mypy.overrides]]
module = "toml.*"
ignore_missing_imports = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "A003",     # `flake8-builtins` - Class attribute {name} is shadowing a Python builtin
    "ANN",      # `flake8-annotations`
    "ARG",      # `flake8-unused-arguments`
    "COM812",   # handled by ruff format
    "D100",     # Missing docstring in public module
    "D101",     # Missing docstring in public class
    "D102",     # Missing docstring in public method
    "D103",     # Missing docstring in public function
    "D104",     # Missing docstring in public package
    "D105",     # Missing docstring in magic method
    "D106",     # Missing docstring in public nested class
    "D107",     # Missing docstring in __init__
    "D202",     # No blank lines allowed after function docstring (found {num_lines})
    "D203",     # 1 blank line required before class docstring
    "D205",     # 1 blank line required between summary line and description
    "D212",     # Multi-line docstring summary should start at the first line
    "D400",     # First line should end with a period
    "D415",     # First line should end with a period, question mark, or exclamation point
    "E501",     # Line too long ({width} > {limit} characters) - managed by ruff format
    "ERA001",   # eradicate - Found commented-out code
    "EXE002",   # The file is executable but no shebang is present
    "FA100",    # `future-rewritable-type-annotation` - obsolete in python >= 3.9
    "FBT001",   # Boolean-typed positional argument in function definition
    "FBT002",   # `flake8-boolean-trap` - Boolean default positional argument in function definition
    "FBT003",   # Boolean positional value in function call
    "FIX",      # `flake8-fixme`
    "ISC001",   # handled by ruff format
    "PERF203",  # `try-except-in-loop` - obsolete in python >= 3.11
    "PGH005",   # doesn't work correctly with `requests-mock`
    "PLR0913",  # Too many arguments to function call
    "PLR2004",  # Magic value used in comparison, consider replacing {value} with a constant variable
    "PT006",    # Wrong name(s) type in @pytest.mark.parametrize, expected {expected}
    "PT017",    # Found assertion on exception {name} in except block, use pytest.raises() instead
    "PLW2901",  # `for` loop variable `search_term` overwritten by assignment target
    "RET502",   # Do not implicitly return None in function able to return non-None value
    "RET503",   # Missing explicit return at the end of function able to return non-None value
    "RUF001",   # ambiguous-unicode-character-string
    "RUF012",   # Mutable class attributes should be annotated with typing.ClassVar
    "S101",     # Use of assert detected
    "S602",     # `subprocess` call with `shell=True` identified
    "TD002",    # missing-todo-author
    "TD003",    # missing-todo-link
    "TID252",   # banned-module-level-imports
]
